[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runsight"
version = "0.1.0"
description = "Running analytics Garmin won't show you: walk-filtered pace, heat-adjusted performance, and beginner milestones."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Henrique Batistuzzo", email = "hbatistuzzo@gmail.com" },
]
keywords = ["running", "garmin", "analytics", "training", "fitness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.0",
    "garminconnect>=0.2.25",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
runsight = "runsight.cli:cli"

[project.urls]
Homepage = "https://github.com/hbatistuzzo/runsight"
Issues = "https://github.com/hbatistuzzo/runsight/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/runsight"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
